--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 <body>
     <header> <!-- Etiqueta semantica de encabezado -->
         <!-- No te olvides de ponerle un encabezado a tu sitio web -->
-        <h1>Mi primer generador da cartas</h1>
+        <h1>Te recomiendo estos animes para ver un fin de semana</h1>
     </header>
     <main>
         <section class="listadoCartas">
-
-
         </section>
+        <div class="botonera">
+            <button onclick="agregarCarta()">Agregar anime</button>
+        </div>
+
+
+
     </main>
     <footer>
-        <p>Hecho con ❤ por <a href="http://www.github.com/lucaszhh" target="_blank" > lucaszhh</a></p>
+        <p>Hecho ❤ por <a href="http://www.github.com/lucaszhh" target="_blank" > Nicolas </a></p>
     </footer>  
 </body>
     <script src="./script.js"></script>
